# fastapi-starter

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: __init__.py  main.py
src/auth/: __init__.py  dependencies.py  jwt.py  models.py  router.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/database/: __init__.py  database.py  models.py
src/items/: __init__.py  models.py  router.py  schemas.py
tests/: __init__.py  test_auth.py  test_items.py
